--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
                 <a data-tab-id="cracks" class="tab-btn hover-underline cursor-pointer text-glow">Cracks</a>
                 <a data-tab-id="credits" class="tab-btn hover-underline cursor-pointer text-glow">Credits</a>
             </div>
-            <span class="glow w-full max-w-{200px} h-px bg-white"></span>
+            <span class="glow w-full w-full h-px bg-white"></span>
 
             <div id="cracks" class="tab hidden">
-                <a>Coming soon!</a>
+                <table class="w-full text-sm text-left">
+                    <tr>
+                        <th>Name</th>
+                        <th>Download</th>
+                    </tr>
+                    <tr>
+                        <td>Violet</td>
+                        <td><a href="assets/cracks/Violet.zip" class="cursor-pointer hover-underline">Violet.zip</a></td>
+                    </tr>
+                </table>
             </div>
 
             <div id="credits" class="tab hidden flex flex-row gap-[10px]">
