--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <span class="glow w-full max-w-{200px} h-px bg-white"></span>
             <div class="flex flex-row gap-[10px]">
-                <a href="index.html" class="hover-underline cursor-pointer text-glow">Home</a>
+                <a href="https://discord.gg/N8NX6bEZD4" class="hover-underline cursor-pointer text-glow">Discord</a>
                 <a data-tab-id="cracks" class="tab-btn hover-underline cursor-pointer text-glow">Cracks</a>
                 <a data-tab-id="credits" class="tab-btn hover-underline cursor-pointer text-glow">Credits</a>
             </div>
