--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <tr>
                         <td>Violet</td>
                         <td><a href="assets/cracks/Violet.zip" class="cursor-pointer hover-underline">Violet.zip</a></td>
+
+                        <td>Fatality</td>
+                        <td><a href="assets/cracks/Fatality.zip" class="cursor-pointer hover-underline">Fatality.zip</a></td>
                     </tr>
                 </table>
             </div>
