removed some fuckass dogshit text gpt sucks

--- a/index.html
+++ b/index.html
@@ -74,7 +74,19 @@
             $(`#${tabId}`).removeClass('hidden');
         });
 
-        const descriptionTexts = ['No more pay to cheat', 'Gorilla Tag mod menus cracked', "Paid cheats made free", "Cracked software, no limits", "Unlock paid cheats for nothing", "Free access to once-paid cheats", ""];
+        const descriptionTexts = [
+            "No more pay to cheat",
+            "Gorilla Tag mod menus cracked",
+            "Paid becomes free",
+            "Cracked mod menus",
+            "Free paid cheats",
+            "No more paid cheats",
+            "Paid cheats made free",
+            "Unlock paid cheats for free",
+            "Paywalls removed",
+            "Paid cheats, no cost",
+            "Paid menus cracked",
+        ];
         $(document).ready(function() {
             const typewriter = $('#typewriter');
             let textIndex = 0;
