Added 'outcast steals from here' text

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             "Paywalls removed",
             "Paid cheats, no cost",
             "Paid menus cracked",
+            "Outcast steals from here"
         ];
         $(document).ready(function() {
             const typewriter = $('#typewriter');
